--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,11 +10,11 @@
 }
 
 // CSS files
-@import 'public/frontend/css/animate.css';
-@import 'public/frontend/css/bootstrap-datetime.min.css';
-@import 'public/frontend/css/flexslider.css';
-@import 'public/frontend/css/front-awesome.css';
-@import 'public/frontend/css/main.css';
-@import 'public/frontend/css/owl-carousel.css';
-@import 'public/frontend/css/owl-theme.css';
-@import 'public/frontend/css/pricing.css';
+@import '../frontend/css/animate.css';
+@import '../frontend/css/bootstrap-datetime.min.css';
+@import '../frontend/css/flexslider.css';
+@import '../frontend/css/front-awesome.css';
+@import '../frontend/css/main.css';
+@import '../frontend/css/owl-carousel.css';
+@import '../frontend/css/owl-theme.css';
+@import '../frontend/css/pricing.css';
