import fichiers css bis bis

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,11 +10,11 @@
 }
 
 // CSS files
-@import '../frontend/css/animate.css';
-@import '../frontend/css/bootstrap-datetime.min.css';
-@import '../frontend/css/flexslider.css';
-@import '../frontend/css/front-awesome.css';
-@import '../frontend/css/main.css';
-@import '../frontend/css/owl-carousel.css';
-@import '../frontend/css/owl-theme.css';
-@import '../frontend/css/pricing.css';
+@import '../css/animate.css';
+@import '../css/bootstrap-datetimepicker.min.css';
+@import '../css/flexslider.css';
+@import '../css/front-awesome.css';
+@import '../css/main.css';
+@import '../css/owl-carousel.css';
+@import '../css/owl-theme.css';
+@import '../css/pricing.css';
