--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,3 +8,12 @@
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+
+@import url(public/frontend/css/animate.css);
+@import url(public/frontend/css/bootstrap-datetime.min.css);
+@import url(public/frontend/css/flexslider.css);
+@import url(public/frontend/css/front-awesome.css);
+@import url(public/frontend/css/main.css);
+@import url(public/frontend/css/owl-carousel.css);
+@import url(public/frontend/css/owl-theme.css);
+@import url(public/frontend/css/pricing.css);
